--- a/Exercicio1.html
+++ b/Exercicio1.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 
-		<p title="Sobre o IFSP-Câmpus de Hortolândia"> O Câmpus Hortolândia, edificado em atendimento à chamada pública do MEC-SETEC no 001/2007 - Plano de Expansão da Rede Federal de Educação Tecnológica - FASE II, está localizado no município de Hortolândia do Estado de São Paulo. <br>Sua autorização de funcionamento se deu através da Portaria no 1.170, de 21 de Setembro de 2010 e iniciou suas atividades educacionais em fevereiro de 2011, oferecendo o Curso Técnico em Informática em dois turnos, tarde e noite.
-		<br>A presença do IFSP em Hortolândia permite a ampliação das opções de qualificação profissional e formação técnica e tecnológica para as indústrias e serviços da região, por meio de educação gratuita e de qualidade.</p>
-
+		<p title="Sobre o IFSP-Câmpus de Hortolândia"><b>O Câmpus Hortolândia, edificado em atendimento à chamada pública do MEC-SETEC no 001/2007 - Plano de Expansão da Rede Federal de Educação Tecnológica - FASE II, está localizado no município de Hortolândia do Estado de São Paulo. <br>Sua autorização de funcionamento se deu através da Portaria no 1.170, de 21 de Setembro de 2010 e iniciou suas atividades educacionais em fevereiro de 2011, oferecendo o Curso Técnico em Informática em dois turnos, tarde e noite.
+		<br>A presença do IFSP em Hortolândia permite a ampliação das opções de qualificação profissional e formação técnica e tecnológica para as indústrias e serviços da região, por meio de educação gratuita e de qualidade.<b></p>
+		<p>uma escola com ensino de qualidade, professore formados e com qualificação, venha se juntar a nós!!!1!!1</p>
 	</body>
 </html>
