--- a/Exercicio1.html
+++ b/Exercicio1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>Exercício 1 - PHP</title>
+		<title>QUALQUER COISA, NÃO IMPORTA ISSO É DOIDO</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
